--- a/projects/docker/spark/notebooks/config/spark-defaults.conf
+++ b/projects/docker/spark/notebooks/config/spark-defaults.conf
@@ -61,4 +61,6 @@ spark.yarn.historyServer.address master:18080
 spark.yarn.jars hdfs://master:9000/user/bigdata/jars/*
 
 # https://stackoverflow.com/questions/66722861/pyspark-packages-installation-on-kubernetes-with-spark-submit-ivy-cache-file-no
-spark.jars.packages hdfs://master:9000/user/bigdata/jars/*
+# https://spark.apache.org/docs/latest/configuration.html
+# https://stackoverflow.com/questions/50861477/basedir-must-be-absolute-ivy2-local
+# spark.jars.ivy hdfs://master:9000/user/bigdata/jars
