--- a/projects/docker/spark/base/Dockerfile
+++ b/projects/docker/spark/base/Dockerfile
@@ -42,6 +42,25 @@ RUN mkdir /download \
 # Note: It will download the archive each time when you build an image
 # ADD https://archive.apache.org/dist/spark/spark-2.4.7/spark-2.4.7-bin-hadoop2.7.tgz /download/
 
+# ======================
+#
+# Stage 1c. Download Kafka
+#
+# ======================
+ 
+FROM ubuntu:16.04 AS kafkaBuilder
+ 
+LABEL maintainer="Sergei Papulin <papulin_bmstu@mail.ru>"
+ 
+RUN apt-get update \
+    && apt-get install -y wget \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
+ 
+# Install Hadoop
+RUN mkdir /download \
+    && wget -P /download/ https://apache-mirror.rbc.ru/pub/apache/kafka/2.8.1/kafka_2.12-2.8.1.tgz \
+    && tar -xvzf /download/kafka_2.12-2.8.1.tgz --directory /download --strip-components 1 \
+    && rm /download/kafka_2.12-2.8.1.tgz
 
 # ======================
 #
@@ -49,7 +68,7 @@ RUN mkdir /download \
 #
 # ======================
 
-FROM ubuntu:16.04 AS main
+FROM ubuntu:18.04 AS main
 
 LABEL maintainer="Sergei Papulin <papulin_bmstu@mail.ru>"
 
@@ -61,6 +80,7 @@ RUN useradd -m -d $BASE_USER_DIR -s /bin/bash bigdata
 
 COPY --from=hadoopBuilder --chown=bigdata:bigdata /download/ $BASE_USER_DIR/hadoop/
 COPY --from=sparkBuilder --chown=bigdata:bigdata /download/ $BASE_USER_DIR/spark/
+COPY --from=kafkaBuilder --chown=bigdata:bigdata /download/ $BASE_USER_DIR/kafka/
 
 # Note: ENV doesn't allow updating variables sequentially
 ENV \
@@ -70,8 +90,10 @@ ENV \
     # Set Spark environment variables
     SPARK_HOME=$BASE_USER_DIR/spark \
     SPARK_CONF_DIR=$BASE_USER_DIR/spark/conf \
+    # Set Kafka environment variables
+    KAFKA_HOME=$BASE_USER_DIR/kafka \
     # Add to PATH
-    PATH=$BASE_USER_DIR/spark/bin:$BASE_USER_DIR/spark:$BASE_USER_DIR/hadoop/bin:$BASE_USER_DIR/hadoop:$PATH
+    PATH=$BASE_USER_DIR/kafka/bin:$BASE_USER_DIR/spark/bin:$BASE_USER_DIR/spark:$BASE_USER_DIR/hadoop/bin:$BASE_USER_DIR/hadoop:$PATH
 
 # ======================
 #
@@ -82,6 +104,7 @@ ENV \
 RUN \
     # Install system packages
     apt-get update && apt-get install -y \
+        locales \
         openssh-server \
         software-properties-common \
         sudo \
@@ -89,6 +112,9 @@ RUN \
         nano \
         tree \
         python3-pip \
+        net-tools \
+        curl \
+        htop \
     # Install JDK 8
     && add-apt-repository ppa:openjdk-r/ppa \
     && apt-get -y install openjdk-8-jdk \
@@ -101,8 +127,8 @@ COPY --chown=bigdata:bigdata "etc/requirements.txt" "$BASE_USER_DIR/requirements
 RUN \
     # Install python packages from the requirements file
     python3 -m pip install --no-cache-dir -r $BASE_USER_DIR/requirements.txt \
-    # Add sudo permission for the bigdata user to start ssh service
-    && echo "bigdata ALL=NOPASSWD:/usr/sbin/service ssh start" >> /etc/sudoers \
+    # Add sudo permission for the bigdata user to anything
+    && echo "bigdata ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers \
     # Set a password to the user
     && usermod --password "$(openssl passwd -1 12345)" bigdata
 
@@ -111,6 +137,14 @@ RUN \
 # Custom configuration
 #
 # ======================
+
+# Set the locale (due to twitter messages can not be printed in console of Jupyter container)
+RUN locale-gen --no-purge en_US.UTF-8
+RUN sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
+    locale-gen
+ENV LANG=en_US.UTF-8  
+ENV LANGUAGE=en_US:en  
+ENV LC_ALL=en_US.UTF-8  
 
 # Copy configuration files
 COPY --chown=bigdata:bigdata ["config/hdfs", "config/yarn", "config/mapreduce", "$HADOOP_CONF_DIR/"]
@@ -130,7 +164,7 @@ WORKDIR $BASE_USER_DIR
 RUN mkdir -p tmp/spark-events .ssh 
 
 # Expose ports for a master node
-EXPOSE 9870 8088 18080 9999
+EXPOSE 9870 8088 18080 9999 7071 7070
 
 # Default command on start
 ENTRYPOINT ["/bin/bash", "/usr/local/bin/entrypoint.sh"]
