Add fix with 201902-citibike-tripdata.csv.zip - due to it is too large file to upload to git

--- a/projects/docker/spark/base/Dockerfile
+++ b/projects/docker/spark/base/Dockerfile
@@ -115,6 +115,7 @@ RUN \
         net-tools \
         curl \
         htop \
+        unzip \
     # Install JDK 8
     && add-apt-repository ppa:openjdk-r/ppa \
     && apt-get -y install openjdk-8-jdk \
